--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -156,6 +156,14 @@ img {
      height: auto;
 }
 
+code {
+     background-color: rgb(223, 223, 223);
+     padding: 8px;
+     border-radius: 5px;
+     display: inline-block;
+     width: 100%;
+}
+
  :focus {
      outline: 0;
 }
@@ -362,6 +370,7 @@ button {
      text-align: center;
 }
 
+
 .text-bg h1 {
      color: #fff;
      font-size: 89px;
@@ -375,6 +384,7 @@ button {
                     -1px 1px 0px rgb(0, 0, 0),                    
                     1px -1px 0px rgb(0, 0, 0),                  
                     7px 0px 0px rgb(0, 0, 0);
+     /* transition: ease-in all 1s; */
 }
 
 .text-bg span {
@@ -388,6 +398,18 @@ button {
                     -2px 2px 0px rgb(0, 0, 0),                    
                     2px -2px 0px rgb(0, 0, 0),                  
                     7px 0px 0px rgb(0, 0, 0);
+}
+
+.text-bg p {
+     color: #fff;
+     font-weight: bold;
+     font-size: 20px;
+     line-height: 30px;
+     letter-spacing: 2px;
+     text-shadow:   -1px -1px 0px rgb(0, 0, 0), 
+                    -1px 1px 0px rgb(0, 0, 0),                    
+                    1px -1px 0px rgb(0, 0, 0),                  
+                    1px 0px 0px rgb(0, 0, 0);
 }
 
 .text-bg ul.social_team {
@@ -694,6 +716,56 @@ button {
 
 /** end We Do section **/
 
+/* Instalação */
+
+.instaling {
+     background-color: white;
+     margin-top: 30px;
+     /* padding: 0px 0 60px 0; */
+}
+
+.instaling .titlepage {
+     text-align: center;
+     padding-bottom: 60px;
+}
+
+.instaling h4 {
+     font-size: 20px;
+     margin:0 0px 0 20px !important;   
+}
+
+.instaling u, li {
+     text-decoration: none;
+     color: #2a2a2c;
+     font-size: 17px;
+}
+
+.instaling p, li{
+     margin:0px 0px 0 20px !important;
+     color: #2a2a2c;
+     font-size: 17px;
+     line-height: 32px;
+     font-weight: 400;
+     margin-top: 0px;
+}
+
+.instaling span {
+     font-weight: bold;
+}
+
+.instaling a {
+     color: #03cafc;
+}
+
+.instaling a:hover {
+     color: #0086a8;
+}
+
+
+.code_test p{
+     color: red;
+     font-size: 15px;
+}
 
 /** Our  team section **/
 
@@ -1153,5 +1225,14 @@ ul.social_icon li a:hover {
      list-style-type: square;
      margin-bottom: 10px;
 }
+.dropdown-item {
+     border-radius: 10px;
+     display: inline-block;
+}
 
-/* Metodologia e Comunicação */
+.dropdown-item:hover {
+     background: #fcc10e;
+     transition:  ease-in all 0.5s;
+     border-radius: 10px;
+}
+
